<resources>
    <string name="app_name">MyMusic</string>
    <string name="string_search">Search</string>
    <string name="button_send">Send</string>
    <string name="title_activity_player">PlayerActivity</string>
    <!-- menu ToolBar -->
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>
    <string name="action_edit">Edit</string>
    <string name="action_settings">Settings</string>
    <!-- Dialogs -->
    <string name="ok">OK</string>
    <string name="dismiss">Dismiss</string>
    <!-- Button -->
    <string name="action_clear">Clear</string>
    <!-- Update -->
    <string name="action_update">Update</string>
    <!-- Player -->
    <string name="no_song">No song selected</string>
    <!-- add -->
    <string name="add_label">Add new song</string>
    <string name="add_title">Title</string>
    <string name="add_artist">Artist</string>
    <string name="add_album">Album</string>
    <string name="add_album_img">Album Url</string>
    <string name="add_youtube">Youtube Url</string>
    <string name="add_filename">File Name</string>
    <!-- edit -->
    <string name="edit_label">Edit song</string>

    <!-- Load -->
    <string name="loading">Loading</string>

</resources>
