<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_add"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/add_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_title"
        android:inputType="text"></EditText>

    <EditText
        android:id="@+id/add_artist"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_artist"
        android:inputType="text"></EditText>

    <EditText
        android:id="@+id/add_album"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_album"
        android:inputType="text"></EditText>

    <EditText
        android:id="@+id/add_album_img"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_album_img"
        android:inputType="text"></EditText>

    <EditText
        android:id="@+id/add_filename"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_filename"
        android:inputType="text"></EditText>

    <EditText
        android:id="@+id/add_youtube_url"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_youtube"
        android:inputType="text"></EditText>

</LinearLayout>