<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSongActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <EditText
        android:id="@+id/add_title"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:hint="@string/add_title"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/add_artist"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:hint="@string/add_artist"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/add_title"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/add_album"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="24dp"
        android:hint="@string/add_album"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_title" />

    <EditText
        android:id="@+id/add_album_img"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/add_album_img"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/add_album"
        app:layout_constraintTop_toBottomOf="@+id/add_artist" />

    <EditText
        android:id="@+id/add_filename"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="24dp"
        android:hint="@string/add_filename"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_album" />

    <EditText
        android:id="@+id/add_youtube_url"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/add_youtube"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/add_filename"
        app:layout_constraintTop_toBottomOf="@+id/add_album_img" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/action_add"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>